// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlaceSearch Component Lat/Lon should render correctly 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="input-group mb-3"
    >
      <div
        className="input-group-prepend"
      >
        <button
          className="btn btn-outline-secondary "
          id="name"
          onClick={[Function]}
          type="button"
        >
          Place Name
        </button>
        <button
          className="btn btn-outline-secondary active"
          id="latlon"
          onClick={[Function]}
          type="button"
        >
          Lat/Lon
        </button>
      </div>
      <input
        className="form-control"
        name="lat"
        onChange={[Function]}
        placeholder="Latitude"
        type="text"
        value=""
      />
      <input
        className="form-control"
        name="lon"
        onChange={[Function]}
        placeholder="Longitude"
        type="text"
        value=""
      />
      <input
        style={
          Object {
            "display": "none",
          }
        }
        type="submit"
      />
    </div>
  </form>
  <div
    className="row"
  >
    <ul
      className="col"
    >
      <PlaceSearchResults
        onPlaceSelection={[Function]}
        results={Array []}
        selectedId={null}
      />
    </ul>
  </div>
</div>
`;

exports[`PlaceSearch Component Place Name should render correctly 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="input-group mb-3"
    >
      <div
        className="input-group-prepend"
      >
        <button
          className="btn btn-outline-secondary active"
          id="name"
          onClick={[Function]}
          type="button"
        >
          Place Name
        </button>
        <button
          className="btn btn-outline-secondary "
          id="latlon"
          onClick={[Function]}
          type="button"
        >
          Lat/Lon
        </button>
      </div>
      <input
        className="form-control"
        name="name"
        onChange={[Function]}
        placeholder="Place Name"
        type="text"
        value=""
      />
    </div>
  </form>
  <div
    className="row"
  >
    <ul
      className="col"
    >
      <PlaceSearchResults
        onPlaceSelection={[Function]}
        results={Array []}
        selectedId={null}
      />
    </ul>
  </div>
</div>
`;
